--- a/revision/ejs/views/instagram.ejs
+++ b/revision/ejs/views/instagram.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/styles.css">
-</head>
+<%- include("includes/header.ejs")%>
 
 <body>
     <h1>This page belongs to <%=data.name%>
@@ -25,6 +17,8 @@
             <h3>comments : <%=post.comments%></h3>
             <%}%>
     </div>
+     <%-include("includes/footer.ejs")%>
+
     <script src="/script.js"></script>
 </body>
 
