--- a/revision/ejs/views/rolldice.ejs
+++ b/revision/ejs/views/rolldice.ejs
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<%- include("includes/header.ejs")%>
+
 <body>
     <h1>Roll dice value is <%=value%></h1>
     <%if(value==6){%>
         <h1>Nice! Roll Dice again..</h1>
-     <%}%>   
+     <%}%> 
+     <%-include("includes/footer.ejs")%>
 </body>
 </html>
