--- a/practice/New folder (3)/views/new.ejs
+++ b/practice/New folder (3)/views/new.ejs
@@ -13,11 +13,11 @@
     <div class="form-container">
         <form class="form" method="post" action="/listings">
             <label for="">Who are You?</label>
-            <input type="text" name="by" id="" required>
+            <input type="text" name="by" id="">
             <label>Write the message into the box</label>
-            <textarea name="message" id="" required></textarea>
+            <textarea name="message" id=""></textarea>
             <label for="">Whom You want to send message</label>
-            <input type="text" name="to" id="" required>
+            <input type="text" name="to" id="">
             <button>Add</button>
         </form>
     </div>
