--- a/WanderLust Project new/views/listings/new.ejs
+++ b/WanderLust Project new/views/listings/new.ejs
@@ -14,7 +14,7 @@
 
     <input type="text" placeholder="Enter the country" name="listing[country]" required />
 
-    <input type="number" placeholder="Enter the Price" name="listing[price]" required />
+    <input type="text" placeholder="Enter the Price" name="listing[price]" required />
 
     <button type="submit">Add Listing</button>
   </form>
